[package]
name = "iws-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-model = "0.15"
twilight-http = { version = "0.15", features = [
    "decompression",
    "rustls-webpki-roots",
], default-features = false }
twilight-gateway = { version = "0.15", features = [
    "zlib-stock",
    "twilight-http",
    "rustls-webpki-roots",
], default-features = false }
twilight-cache-inmemory = "0.15"
twilight-util = { version = "0.15", features = ["builder"] }
zephyrus = "0.9.0"

tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"

eyre = "0.6.8"
dotenvy = "0.15.7"
serde = "1.0.164"
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8.5"
url = "2.4.0"

mongodb = "2.6.0"
axum = { version = "0.6.18", features = ["macros"] }
reqwest = { version = "0.11.18", features = [
    "rustls-tls-webpki-roots",
    "json",
] }
